--- a/Amazon/index.html
+++ b/Amazon/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,11 +9,12 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+
 <body>
     <div class="header">
         <div class="section1">
             <div class="logo">
-                <img src="./amazon.png" alt="amazon_logo" >
+                <img src="./amazon.png" alt="amazon_logo">
             </div>
             <div class="deliver">
                 <div class="icon">
@@ -24,36 +26,31 @@
                 </div>
             </div>
         </div>
-      
         <div class="section2">
-            <div class="searchbox">searchbox</div>
+            <div class="searchbox">
+                <input type="text">
+            </div>
 
         </div>
-       <div class="section3">
-        <div class="signin">signin</div>
-        <div class="orders">orders</div>
-        <div class="cart">cart</div>
- 
-       </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
+        <div class="section3">
+            <div class="signin">
+                <button>SignIn</button>
+            </div>
+            <div class="orders">
+                <span>Returns</span>
+                <span>& Orders</span>
+            </div>
+            <div class="cart">
+                <i class="fa fa-shopping-cart"></i>
+            </div>
+        </div>
     </div>
     <div class="subheader"></div>
     <div class="container">
 
 
     </div>
-    
+
 </body>
+
 </html>
