--- a/Amazon/index.html
+++ b/Amazon/index.html
@@ -45,12 +45,23 @@
             </div>
         </div>
     </div>
-    <div class="subheader"></div>
+    <div class="subheader">
+        <div>All</div>
+        <div>Today's Deals</div>
+        <div>Customer Service</div>
+        <div>Registry</div>
+        <div>Gift Cards</div>
+    </div>
     <div class="container">
 
-
+     <div class="card">
+        <div class="image-card"></div>
+        <div class="card-content"></div>
+     </div>
     </div>
 
-</body>
 
+<script src="./index.js"></script>
+</body>
+  
 </html>
