--- a/Amazon/index.html
+++ b/Amazon/index.html
@@ -54,10 +54,12 @@
     </div>
     <div class="container">
 
-     <div class="card">
-        <div class="image-card"></div>
+     <!-- <div class="card">
+        <div class="image-card">
+        <img src="" alt="" srcset="">
+        </div>
         <div class="card-content"></div>
-     </div>
+     </div> -->
     </div>
 
 
